--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -18,22 +18,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a8c-Xe-4fZ">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ln4-iY-rgg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="p2h-w2-Zvr">
+                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="jOr-lb-jbY" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="2" width="90" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5tN-0K-L23">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="p4i-os-v2r">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="5tN-0K-L23" secondAttribute="bottom" id="5Rx-Nc-voS"/>
+                                            <constraint firstItem="5tN-0K-L23" firstAttribute="leading" secondItem="jOr-lb-jbY" secondAttribute="leading" id="7IS-oo-ZxD"/>
+                                            <constraint firstItem="p4i-os-v2r" firstAttribute="centerY" secondItem="jOr-lb-jbY" secondAttribute="centerY" id="Bng-0v-9VG"/>
+                                            <constraint firstItem="p4i-os-v2r" firstAttribute="centerX" secondItem="jOr-lb-jbY" secondAttribute="centerX" id="SWZ-Hk-x7u"/>
+                                            <constraint firstItem="5tN-0K-L23" firstAttribute="top" secondItem="jOr-lb-jbY" secondAttribute="top" id="i9h-mX-6wo"/>
+                                            <constraint firstAttribute="trailing" secondItem="5tN-0K-L23" secondAttribute="trailing" id="sOa-yC-CsF"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="5tN-0K-L23" id="3gj-FS-xEe"/>
+                                            <outlet property="spinner" destination="p4i-os-v2r" id="o6W-8k-byH"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="a8c-Xe-4fZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9Qu-g9-JFd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a8c-Xe-4fZ" secondAttribute="trailing" id="d5O-e9-uhH"/>
-                            <constraint firstItem="a8c-Xe-4fZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fRs-3u-Gnf"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a8c-Xe-4fZ" secondAttribute="bottom" id="hPI-bY-alO"/>
+                            <constraint firstAttribute="bottom" secondItem="Ln4-iY-rgg" secondAttribute="bottom" id="0Jl-gh-3xP"/>
+                            <constraint firstItem="Ln4-iY-rgg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2FW-dF-vVo"/>
+                            <constraint firstAttribute="trailing" secondItem="Ln4-iY-rgg" secondAttribute="trailing" id="MIM-Ls-aeH"/>
+                            <constraint firstItem="Ln4-iY-rgg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OUu-NH-a7R"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Photorama" id="Bc2-oS-4hd"/>
                     <connections>
-                        <outlet property="imageView" destination="a8c-Xe-4fZ" id="DAJ-qG-SPO"/>
+                        <outlet property="collectionView" destination="Ln4-iY-rgg" id="ZGx-iG-e9I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
